[Overflow-494] [BUGFIX] Question List Scroll and Grid Items (#291)
* [Overflow-494] [BUGFIX] Question List Scroll and Grid Items

* Set fixed height on Question Grid Item

--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -19,7 +19,7 @@
     }
 
     .scrollbar::-webkit-scrollbar-thumb:hover {
-        background-color: #f5d3cf;
+        background-color: #716666;
     }
 }
 
@@ -75,7 +75,7 @@ input:-webkit-autofill:active {
 
 @media (min-width: 1220px) {
     .question-list-header {
-        @apply flex h-16 justify-between;
+        @apply flex justify-between;
     }
 }
 
@@ -99,10 +99,16 @@ input:-webkit-autofill:active {
 
 @media (min-width: 800px) and (max-width: 1220px) {
     .question-list-filters {
-        @apply mt-4 w-full;
+        @apply mt-2 w-full;
+    }
+    .question-list-search-filters {
+        @apply mt-4;
     }
     .question-list-header {
         @apply h-24;
+    }
+    .question-list {
+        @apply mt-2;
     }
 }
 
